Resolve module4-task1

--- a/index.html
+++ b/index.html
@@ -114,28 +114,28 @@
 <footer class="footer container">
   <div class="center-wrapper">
     <section class="footer-logo">
-      Сделано в <a tabindex="1" href="http://htmlacademy.ru" class="footer-logo-link"><img src="img/ha-logo.png"
+      Сделано в <a tabindex="0" href="http://htmlacademy.ru" class="footer-logo-link"><img src="img/ha-logo.png"
                                                                                            class="footer-logo-image"
                                                                                            width="130"
                                                                                            alt="HTML Academy"/>HTML
       Academy</a> &copy; 2017
     </section>
     <nav class="footer-social">
-      <a tabindex="1" href="https://twitter.com/htmlacademy_ru" alt="twitter"
+      <a tabindex="0" href="https://twitter.com/htmlacademy_ru" alt="twitter"
          class="footer-social-item footer-social-item-twitter" target="_blank" rel="nofollow">Twitter</a>
-      <a tabindex="1" href="https://www.instagram.com/htmlacademy/" alt="instagram"
+      <a tabindex="0" href="https://www.instagram.com/htmlacademy/" alt="instagram"
          class="footer-social-item footer-social-item-instagram" target="_blank" rel="nofollow">Instagtam</a>
-      <a tabindex="1" href="https://www.facebook.com/htmlacademy" alt="facebook"
+      <a tabindex="0" href="https://www.facebook.com/htmlacademy" alt="facebook"
          class="footer-social-item footer-social-item-facebook" target="_blank" rel="nofollow">Facebook</a>
-      <a tabindex="1" href="https://vk.com/htmlacademy" alt="vk" class="footer-social-item footer-social-item-vk"
+      <a tabindex="0" href="https://vk.com/htmlacademy" alt="vk" class="footer-social-item footer-social-item-vk"
          target="_blank" rel="nofollow">VK</a>
     </nav>
   </div>
 </footer>
 
 
-<div class="gallery-overlay hidden">
-  <span class="gallery-overlay-close">&times;</span>
+<div class="gallery-overlay hidden" tabindex="0">
+  <span class="gallery-overlay-close" tabindex="0">&times;</span>
   <div class="gallery-overlay-preview">
     <img src="" class="gallery-overlay-image" alt="">
     <div class="gallery-overlay-controls">
@@ -146,7 +146,7 @@
 </div>
 
 <template id="picture-template" style="display: none">
-  <a href="" class="picture">
+  <a href="" class="picture" tabindex="0">
     <img src="" width="182" height="182">
     <span class="picture-stats">
       <span class="picture-stat picture-comments"></span>
