--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
       <input class="upload-form-hashtags" name="hashtags" placeholder="#хэш-тег">
 
-      <textarea class="upload-form-description" name="description" placeholder="Ваш комментарий..."></textarea>
+      <textarea class="upload-form-description" name="description" placeholder="Ваш комментарий..." required maxlength="100" minlength="30"></textarea>
 
       <button class="upload-form-cancel" type="reset" id="upload-cancel"></button>
       <button class="upload-form-submit" type="submit" id="upload-submit">Отправить</button>
