--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
 <form class="upload-form" id="upload-select-image" method="post"
       enctype="multipart/form-data"
-      autocomplete="off">
+      autocomplete="off"
+      action="https://1510.dump.academy/kekstagram">
   <div class="upload-image">
     <input type="file" id="upload-file" class="upload-input" name="filename" required>
     <label class="upload-file upload-control" for="upload-file"></label>
@@ -38,7 +39,7 @@
         <button type="button"
                 class="upload-resize-control upload-resize-controls-button upload-resize-controls-button-dec">–
         </button><!--
-        --><input type="text" class="upload-resize-control upload-resize-controls-value" value="55%" readonly title="Image Scale" name="scale"/><!--
+        --><input type="text" class="upload-resize-control upload-resize-controls-value" value="100%" readonly title="Image Scale" name="scale"/><!--
         --><button type="button"
                 class="upload-resize-control upload-resize-controls-button upload-resize-controls-button-inc">+
         </button>
