Solve module4-task2 in process

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </button><!--
         --><input type="text" class="upload-resize-control upload-resize-controls-value" value="100%" readonly title="Image Scale" name="scale"/><!--
         --><button type="button"
-                class="upload-resize-control upload-resize-controls-button upload-resize-controls-button-inc" disabled>+
+                class="upload-resize-control upload-resize-controls-button upload-resize-controls-button-inc">+
         </button>
       </fieldset>
 
