--- a/index.html
+++ b/index.html
@@ -157,10 +157,9 @@
 </template>
 
 <script src="./js/util.js"></script>
-<script src="./js/data.js"></script>
-<script src="./js/picture.js"></script>
-<script src="./js/preview.js"></script>
-<script src="./js/gallery.js"></script>
+<script src="./js/get-photos.js"></script>
+<script src="./js/open-photo.js"></script>
+<script src="./js/app.js"></script>
 <script src="./js/form.js"></script>
 </body>
 </html>
