Solve module5-task2

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
 
       <fieldset class="upload-effect-controls">
-        <div class="upload-effect-level">
+        <div class="upload-effect-level hidden">
           <div class="upload-effect-level-line">
             <div class="upload-effect-level-pin"></div>
             <div class="upload-effect-level-val"></div>
