--- a/index.html
+++ b/index.html
@@ -160,6 +160,9 @@
 <script src="./js/get-photos.js"></script>
 <script src="./js/open-photo.js"></script>
 <script src="./js/app.js"></script>
+<script src="./js/init-slider.js"></script>
+<script src="./js/init-scale.js"></script>
+<script src="./js/init-effects.js"></script>
 <script src="./js/form.js"></script>
 </body>
 </html>
