--- a/index.html
+++ b/index.html
@@ -157,6 +157,8 @@
 </template>
 
 <script src="./js/util.js"></script>
+<script src="./js/info-message.js"></script>
+<script src="./js/backend.js"></script>
 <script src="./js/get-photos.js"></script>
 <script src="./js/open-photo.js"></script>
 <script src="./js/app.js"></script>
