Solve module6-task1

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
           </div>
         </div>
 
+        <input type="hidden" name="effect-intensity" value="100%">
+
         <input type="radio" name="effect" id="upload-effect-none" value="none" checked>
         <label class="upload-effect-label" for="upload-effect-none">
           <div class="upload-effect-preview"></div>
