--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <div class="upload-effect-level-pin"></div>
             <div class="upload-effect-level-val"></div>
           </div>
+          <input type="hidden" name="effect-level" id="effect-level" value="100%">
         </div>
 
         <input type="radio" name="effect" id="upload-effect-none" value="none" checked>
@@ -160,6 +161,7 @@
 <script src="./js/get-photos.js"></script>
 <script src="./js/open-photo.js"></script>
 <script src="./js/app.js"></script>
+<script src="./js/init-slider.js"></script>
 <script src="./js/init-scale.js"></script>
 <script src="./js/init-effects.js"></script>
 <script src="./js/form.js"></script>
