Fix linter errors

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 </template>
 
 <script src="./js/util.js"></script>
-<script src="./js/info-message.js"></script>
+<script src="./js/show-message.js"></script>
 <script src="./js/backend.js"></script>
 <script src="./js/get-photos.js"></script>
 <script src="./js/open-photo.js"></script>
