Solve module7-task1

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
 
 <script src="./js/util.js"></script>
 <script src="./js/show-message.js"></script>
+<script src="./js/init-filters.js"></script>
 <script src="./js/backend.js"></script>
 <script src="./js/open-photo.js"></script>
 <script src="./js/app.js"></script>
